Added menu to button action & functionality to revert from popup state

--- a/manifest.json
+++ b/manifest.json
@@ -18,7 +18,8 @@
 	"permissions": [
 		"activeTab", // Get URL of current tab
 		"contextMenus", // Display menus here and there
-		"storage" // Save/load settings
+		"storage", // Save/load settings
+		"tabs" // Ability to view tab titles...
 	],
 
 	"background": {
