Add browser-polyfill for chromium support
Ref #45

--- a/manifest.json
+++ b/manifest.json
@@ -24,7 +24,10 @@
 	],
 
 	"background": {
-		"scripts": [ "content/background/background.js" ]
+		"scripts": [
+			"content/_shared/browser-polyfill.min.js",
+			"content/background/background.js"
+		]
 	},
 
 	"browser_action": {
